bloom-room-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bloom-room-api-service
  namespace: bloom-room-api
spec:
  selector:
    app: bloom-room-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
